# ArthroBot

./: .gitignore  README.md
Control/: joystick.py  sliders.py
Control/include/: Adafruit_PWMServoDriver.h  I2Cdev.h  Servo.h  ServoTimers.h
Control/src/: Adafruit_I2CDevice.cpp  Adafruit_PWMServoDriver.cpp  I2Cdev.cpp  Servo.cpp  main.cpp
Model/URDF Model/: arthrobot_model.urdf
arthrobot_ws/: launch.sh
arthrobot_ws/src/arthrobot_bringup/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_bringup/launch/: arthrobot_bringup.launch.py
arthrobot_ws/src/arthrobot_client/: package.xml  setup.cfg  setup.py
arthrobot_ws/src/arthrobot_client/arthrobot_client/: arthrobot_control_gui.py  arthrobot_control_joystick.py  arthrobot_servo_client.py  temp.py
arthrobot_ws/src/arthrobot_controller/: CMakeLists.txt  arthrobot_controller.xml  package.xml
arthrobot_ws/src/arthrobot_controller/arthrobot_controller/: motors_interface.py
arthrobot_ws/src/arthrobot_controller/config/: arthrobot_controllers.yaml
arthrobot_ws/src/arthrobot_controller/include/arthrobot_controller/: arthrobot_hardware_interface.hpp
arthrobot_ws/src/arthrobot_controller/launch/: controller.launch.py
arthrobot_ws/src/arthrobot_controller/src/: arthrobot_hardware_interface.cpp
arthrobot_ws/src/arthrobot_description/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_description/launch/: display.launch.py  gazebo.launch.py
arthrobot_ws/src/arthrobot_description/meshes/: base_link.stl  left_finger_base_link.stl  left_finger_link.stl  left_fingertip_link.stl  palm_link.stl  right_finger_base_link.stl  right_fingertip_link.stl  shoulder_link.stl  waist_link.stl  wrist_link.stl
arthrobot_ws/src/arthrobot_description/rviz/: display.rviz
arthrobot_ws/src/arthrobot_description/urdf/: arthrobot.urdf  arthrobot.urdf.xacro  arthrobot_gazebo.xacro  arthrobot_ros2_control.xacro
arthrobot_ws/src/arthrobot_examples/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_examples/src/: simple_moveit_interface.cpp
arthrobot_ws/src/arthrobot_interfaces/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_interfaces/action/: ArthrobotTask.action
arthrobot_ws/src/arthrobot_interfaces/msg/: ArthrobotPositionCommand.msg
arthrobot_ws/src/arthrobot_moveit/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_moveit/config/: arthrobot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  servo_kinematics.yaml  servo_params.yaml
arthrobot_ws/src/arthrobot_moveit/launch/: moveit.launch.py
arthrobot_ws/src/arthrobot_msgs/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_remote/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_remote/src/: task_server.cpp
arthrobot_ws/src/arthrobot_task_server/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_task_server/launch/: arthrobot_waypoint_follower.launch.py
arthrobot_ws/src/arthrobot_task_server/src/: arthrobot_task_server.cpp  arthrobot_waypoint_follower.cpp
arthrobot_ws/src/arthrobot_utils/: CMakeLists.txt  package.xml
arthrobot_ws/src/arthrobot_utils/arthrobot_utils/: angle_conversion.py
arthrobot_ws/src/arthrobot_utils/src/: angle_conversion.cpp
arthrobot_ws/src/test_example_cpp/: CMakeLists.txt  package.xml
arthrobot_ws/src/test_example_cpp/src/: simple_publisher.cpp
arthrobot_ws/src/test_example_py/: package.xml  setup.cfg  setup.py
arthrobot_ws/src/test_example_py/test_example_py/: simple_publisher.py  simple_subscriber.py
